# cookiecutter-py-module

./: README.md  Release.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: CONTRIBUITING.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.rst  debug-logconf.yml  docker.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: build_pages.yml  pr_validation.yml  publish.yml
{{cookiecutter.project_slug}}/tests/: test_demo.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/: __main__.py  __version__.py
